tests/ui/fail/fn-mismatch-abi-02.stderr
error: encountered mismatch in abi for #[union_fn] method
 --> tests/ui/fail/fn-mismatch-abi-02.rs:6:5
  |
6 |     fn bar() {}
  |     ^^

error: mismatch with this method
 --> tests/ui/fail/fn-mismatch-abi-02.rs:5:5
  |
5 |     extern "C" fn foo() {}
  |     ^^^^^^
